# securecloud

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
api-gateway/: CMakeLists.txt  Dockerfile
api-gateway/include/: GatewayWs.h
api-gateway/src/: GatewayWs.cpp  main.cpp
client/: CMakeLists.txt  resources.qrc
client/i18n/: en_EN.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts
client/include/: ActivityPage.h  CalendarPage.h  ChatPage.h  ClientConsoleApp.h  ContactPage.h  EmergencyPage.h  FilterPage.h  Footer.h  GroupPage.h  Header.h  Home.h  LanguageSelector.h  Login.h  MainPage.h  MainWindow.h  MessagingClient.h  NotConnectedLayout.h  SettingPage.h  clientApp.h
client/include/api/: AuditClient.h  AuthClient.h  MessagingApiClient.h
client/include/core/: ChatMessage.h  ClientService.h  ClientState.h  HttpGatewayClient.h  HttpUtils.h  MessagingClient.h  RawMessageDto.h  UserDto.h  UserInfoDto.h  WsGatewayClient.h
client/src/: ActivityPage.cpp  CalendarPage.cpp  ChatPage.cpp  ClientConsoleApp.cpp  ContactPage.cpp  EmergencyPage.cpp  Footer.cpp  GroupPage.cpp  Header.cpp  Home.cpp  LanguageSelector.cpp  Login.cpp  MainPage.cpp  MainWindow.cpp  NotConnectedLayout.cpp  SettingPage.cpp  clientApp.cpp  main.cpp
client/src/api/: AuditClient.cpp  AuthClient.cpp  MessagingApiClient.cpp
client/src/core/: ClientService.cpp  FilterPage.cpp  HttpGatewayClient.cpp  WsGatewayClient.cpp
client/styles/: secure-cloud-style.qss
common/Env/: EnvLoader.cpp  EnvLoader.h
common/HashUtils/: HashUtils.cpp  HashUtils.h
common/db/: DbConnection.cpp  DbConnection.h
common/i18n/: en_US.qm  en_US.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts
common/include/: TranslationManager.h
common/src/: TranslationManager.cpp
config/examples/: audit-service.env.example  auth-service.env.example
docker/: docker-compose.yml
docker/examples/: auth-service.env.example
scripts/: cmake.ps1  docker.ps1  securecloud.ps1  sqitch.ps1  translate.ps1
services/audit-service/: CMakeLists.txt  Dockerfile
services/audit-service/data/: DbAuditService.sql
services/audit-service/include/: AuditController.h  AuditDb.h  AuditRepository.h  AuditRoutes.h  AuditService.h  Refresh.h  Routes.h  ServiceTargets.h
services/audit-service/src/: AuditController.cpp  AuditDb.cpp  AuditRepository.cpp  AuditRoutes.cpp  AuditService.cpp  Refresh.cpp  Routes.cpp  ServiceTargets.cpp  main.cpp
services/auth-service/: CMakeLists.txt  Dockerfile  README.md  main.cpp
services/auth-service/data/: auth-service-init-data.sql
services/auth-service/include/: AuthServiceRoutes.h
services/auth-service/migrations/: sqitch.plan
services/auth-service/migrations/deploy/: 20251201141947_version_migrations.sql  20251201_version_migrations.sql  20251204161034_version_migrations.sql  20251205093048_version_migrations.sql  20260212103748_version_migrations.sql
services/auth-service/migrations/revert/: 20251201141947_version_migrations.sql  20251201_version_migrations.sql  20251204161034_version_migrations.sql  20251205093048_version_migrations.sql  20260212103748_version_migrations.sql
services/auth-service/migrations/verify/: 20251201141947_version_migrations.sql  20251201142005_version_migrations.sql  20251201142023_version_migrations.sql  20251201_version_migrations.sql  20251204161034_version_migrations.sql  20251205093048_version_migrations.sql  20260212103748_version_migrations.sql
services/auth-service/model/: UserProfile.h
services/auth-service/repository/: UserRepository.cpp  UserRepository.h
services/auth-service/routes/: AuthServiceRoutes.cpp  AuthServiceRoutes.h
services/auth-service/service/: UserService.cpp  UserService.h
services/auth-service/services/: UserService.cpp  UserService.h
services/auth-service/src/: AuthServiceRoutes.cpp  main.cpp
services/auth-service/utils/: HashUtils.cpp  HashUtils.h
services/messaging-service/: CMakeLists.txt  Dockerfile  README.md
services/messaging-service/include/: MessagingWs.h
services/messaging-service/include/models/: GroupModel.h  MessageModel.h
services/messaging-service/include/repository/: GroupRepository.h  MessageRepository.h
services/messaging-service/migrations/: sqitch.plan
services/messaging-service/migrations/deploy/: 20260108112940_create_groups_and_messages.sql  20260108113056_insert_test_messages.sql  20260211103226_create_groups_member_table.sql  20260211105028_insert_groups_members.sql
services/messaging-service/migrations/revert/: 20260108112940_create_groups_and_messages.sql  20260108113056_insert_test_messages.sql  20260211103226_create_groups_member_table.sql  20260211105028_insert_groups_members.sql
services/messaging-service/migrations/verify/: 20260108112940_create_groups_and_messages.sql  20260108113056_insert_test_messages.sql  20260211103226_create_groups_member_table.sql  20260211105028_insert_groups_members.sql
services/messaging-service/src/: MessagingWs.cpp  main.cpp
services/messaging-service/src/repository/: GroupRepository.cpp  MessageRepository.cpp
